Added more text

--- a/vignettes/blueprint.Rmd
+++ b/vignettes/blueprint.Rmd
@@ -241,11 +241,22 @@ where $E_{UVC}$ is the efficacy of far UVC. For example, an efficacy of 50% resu
 
 # Illustrative Simulations of Far UVC
 
-Assuming that the transmissibility experienced by individuals in their household, workplace or school, and leisure setting is three times greater than that experienced in their community setting, and tuned the relative, setting-specific transmissibility parameters ($\beta_{m}$) to approximate a basic pathogen reproductive number ($R0$) of 2.
+To demonstrate both the types of simulations and model outputs that `helios` can generate, and how these outputs can be presented graphically, we ran two sets of simulations to investigate the following:
+
+1. Comparison of random and targeted far UVC deployment under different pathogen outbreak scenarios
+2. The impact of far UVC efficacy, coverage and deployment strategy on epidemic
+
+The results presented in these figures are illustrative and subject to change through the model development phase.
+
+## Simulating the impact of far UVC disease dynamics with helios
+
+To assess the potential of far UVC deployment to curtail the transmission of a theoretical pathogen fixed the model's pathogen and far UVC parameters and compared the  
+
+We assumed that the transmission intensity experienced by individuals in their household, workplace or school, and leisure setting was three times greater than that experienced in their community setting, and tuned the relative, setting-specific transmissibility parameters ($\beta_{m}$) to approximate a basic pathogen reproductive number ($R0$) of 2.
 
 
 
-(ref:exemplar-epidemic) Illustration of the effect of random and targeted far UVC deployment, relative to an interventionless baseline, on the disease state dynamics of a theoretical pathogen when full and lasting immunity to infection is acquired by infected individuals ($\beta_{H}$ = 0.186, $\beta_{W}$ = 0.186, $\beta_{S}$ = 0.186, $\beta_{L}$ = 0.186, $\beta_{C}$ = 0.062).
+(ref:exemplar-epidemic) Illustration of the effect of random and targeted far UVC deployment, relative to an interventionless baseline, on the disease state dynamics of a theoretical pathogen when full and lasting immunity to infection is acquired by infected individuals ($\beta_{H}$ = 0.186, $\beta_{W}$ = 0.186, $\beta_{S}$ = 0.186, $\beta_{L}$ = 0.186, $\beta_{C}$ = 0.062, far UVC coverage = 0.5, far UVC efficacy = 0.75).
 
 ```{r exemplar-epidemic, fig.cap="(ref:exemplar-epidemic)"}
 
@@ -274,14 +285,14 @@ exemplar_data |>
 
 Explanation of epidemic exemplar.
 
-(ref:exemplar-endemic) Illustration of the effect of random and targeted far UVC deployment, relative to an interventionless baseline, on the disease state dynamics of a theoretical pathogen, when the immunity acquired during infection wanes over time ($\beta_{H}$ = 0.186, $\beta_{W}$ = 0.186, $\beta_{S}$ = 0.186, $\beta_{L}$ = 0.186, $\beta_{C}$ = 0.062).
+(ref:exemplar-endemic) Illustration of the effect of random and targeted far UVC deployment, relative to an interventionless baseline, on the disease state dynamics of a theoretical pathogen, when the immunity acquired during infection wanes over time ($\beta_{H}$ = 0.186, $\beta_{W}$ = 0.186, $\beta_{S}$ = 0.186, $\beta_{L}$ = 0.186, $\beta_{C}$ = 0.062, far UVC coverage = 0.5, far UVC efficacy = 0.75, duration of immunity = 14 days).
 
 ```{r exemplar-endemic, fig.cap="(ref:exemplar-endemic)"}
 
 # Plot the epidemic exemplar simulations:
 exemplar_data |>
   filter(Setting == "Endemic") |>
-  filter(timestep %in% c(1:1000)) |>
+  filter(timestep %in% c(250:1000)) |>
   mutate(Percentage = Proportion * 100) |>
   ggplot(aes(x = timestep, y = Percentage, colour = State)) +
   geom_line(linewidth = 1.2) +
@@ -301,7 +312,10 @@ exemplar_data |>
 
 ```
 
-# Parameter sensitivity
+## Assessing the sensitivty of `helios` to far UVC parameters
+The `helios` framework can also be used to assess the sensitivity of the individual-based model to pathogen (e.g. duration of immunity), human population (e.g. setting-specific transmission intensity), and operational (e.g. far UVC) parameters on measures of interest. To illustrate, we simulated an epidemic with varying levels of transmission intensity ($R0$) and assessed the sensitivity of final epidemic size, defined as the total proportion of the population that gets infected during the course of an epidemic, to far UVC coverage, efficacy, and deployment strategy. Figures \@ref(fig:sweep-R0-coverage):\@ref(fig:sweep-efficacy-coverage) depict how the final epidemic size changes with $R0$, far UVC coverage, far UVC efficacy, and far UVC deployment strategy, and illustrate how `helios` model outputs can be graphed.  
+
+The deployment of far UVC could reduce the total percentage/proportion of the population that is infected during an outbreak of pathogen to which full and lasting immunity is acquired (Figures \@ref(fig:sweep-R0-coverage):\@ref(fig:sweep-efficacy-coverage)). For a given transmission intensity ($R0$), increasing the coverage (Figure \@ref(fig:sweep-R0-coverage)) and/or efficacy (Figure \@ref(fig:sweep-R0-efficacy), Figure \@ref(fig:sweep-efficacy-coverage)) of far UVC reduced the final size of an epidemic outbreak of a theoretical pathogen, defined as the total proportion of the population that the pathogen infects during the outbreak
 
 (ref:sweep-R0-coverage) The effect of R0 and far UVC coverage, under random and targeted far UVC deployment, on the proportion of the population that a pathogen infects when full and lasting immunity is acquired by infected individuals.
 
@@ -360,8 +374,6 @@ cowplot::plot_grid(
 )
 
 ```
-
-Add some text.
 
 (ref:sweep-R0-efficacy) The effect of R0 and far UVC efficacy, under random and targeted far UVC deployment, on the proportion of the population that a pathogen infects when full and lasting immunity is conferred on infected individuals.
 
